--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
-Cost Management
+/* Cost Management */
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
