--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Sets the box style of every element */
+/* Sets the box size of elements */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -42,6 +42,7 @@ body {
     margin-left: 25px;
 }
 
+/* Style for the links */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -86,56 +87,28 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-/* Lead Generation */
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-/* Brand Awareness */
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-/* Cost Management */
-.benefit-cost {
+
+/* Style for the aside sections */
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3 {
+/* Style for the aside subtitle */
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
+/* Style for the aside images */
+.benefit img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
 }
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-/* Lead Generation icon */
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-/* Brand Awareness icon */
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-/* Cost Management icon */
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-/* Style for the content images */
-.search-engine-optimization {
+/* Style for the content in articles */
+.articlecontent {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -144,50 +117,17 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+/* Style for the content images in articles */
+.articlecontent img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+/* Style for the subtitle in articles */
+.articlecontent h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 /* Style for the footer */
 .footer {
     padding: 30px;
